# AetherPackBot

./: .gitignore  Dockerfile  LICENSE  README.md  compose.yml  config.example.yaml  main.py  pyproject.toml
aetherpackbot/: __init__.py  cli.py
aetherpackbot/api/: __init__.py  app.py  server.py
aetherpackbot/api/routes/: chat.py  config.py  health.py  platforms.py  plugins.py  providers.py
aetherpackbot/api/static/: index.html
aetherpackbot/api/static/css/: style.css
aetherpackbot/api/static/js/: api.js  app.js
aetherpackbot/config/: __init__.py  settings.py
aetherpackbot/core/: __init__.py  container.py  context.py  engine.py  events.py
aetherpackbot/messages/: __init__.py  message.py
aetherpackbot/plugins/: __init__.py  base.py  decorators.py  loader.py
aetherpackbot/providers/: __init__.py  anthropic.py  base.py  gemini.py  openai.py
aetherpackbot/utils/: __init__.py  logging.py
plugins/: chat.py  echo.py
